build: done home

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         <div class="hero-banner">
             <div class="hero-content">
                 <h1>Ván ép Tiêu chuẩn <br> Giải pháp cho Sản xuất <br> Quy mô lớn</h1>
-                <p>Chất lượng ổn định · Sản xuất chủ động · Tiêu chuẩn thị trường · Giao hàng <br> Đúng tiến độ · Tiết kiệm chi phí</p>
+                <p>Chất lượng ổn định · Sản xuất chủ động · Tiêu chuẩn thị trường<br> Giao hàng đúng tiến độ · Tiết kiệm chi phí</p>
                 <div class="hero-btns">
                     <a href="./vn/concat/index.html" class="btn-hero btn-contact-hero">Liên hệ chúng tôi</a>
                     <a href="./assets/images/chat_luong.svg" download class="btn-hero btn-catalog-hero">Tải Catalog</a>
