--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             scroll-behavior: smooth;
         }
         a { text-decoration: none; color: inherit; }
-        .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
+        .container { max-width: 85%; margin: 0 auto; padding: 0 20px; }
 
         /* --- 2. NAVBAR SECTION --- */
         .navbar {
@@ -60,7 +60,7 @@
             z-index: 1000;
             box-shadow: 0 4px 15px rgba(0,0,0,0.03);
         }
-        .nav-container { display: flex; align-items: center; justify-content: space-between; }
+        .nav-container { display: flex; align-items: center; justify-content: space-between; max-width: 95% }
         .logo-wrapper { display: flex; align-items: center; gap: 10px; flex-shrink: 0;}
         .logo-font { font-family: 'Bungee', sans-serif;}
         .logo-wrapper img { height: 35px; width: auto; display: block; }
@@ -99,7 +99,7 @@
 
         /* --- 3. HERO SECTION --- */
         .hero-wrapper { padding: 20px 0 60px 0;
-            position: relative; width: 100%; height: 540px; overflow: hidden;
+            position: relative; width: 100%; height: 700px; overflow: hidden;
             display: flex; align-items: center; justify-content: center; text-align: center;
             background-image:   linear-gradient(
                     90deg,
