--- a/index.html
+++ b/index.html
@@ -28,8 +28,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "VIETPLYWOOD",
+            "url": "https://vietplywood.com",
+            "logo": "https://vietplywood.com/assets/images/logo.svg",
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+84916884008",
+                "contactType": "sales",
+                "areaServed": "VN",
+                "availableLanguage": ["vi", "en"]
+            },
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Khu Liên Đồng, Xã Thanh Sơn",
+                "addressLocality": "Phú Thọ",
+                "addressRegion": "Phú Thọ",
+                "addressCountry": "VN"
+            }
+        }
+    </script>
 
-    // css
+
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/home.css">
 
@@ -46,11 +69,11 @@
         <div class="nav-right-group">
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" class="active">Trang chủ</a></li>
-                <li><a href="./vn/catalog/index.html">Catalog</a></li>
-                <li><a href="./vn/products/index.html">Sản phẩm</a></li>
-                <li><a href="./vn/blogs/index.html">Blog</a></li>
-                <li><a href="./vn/about/index.html">Về chúng tôi</a></li>
-                <li><a href="vn/contact/index.html">Báo giá</a></li>
+                <li><a href="./vn/catalog/">Catalog</a></li>
+                <li><a href="./vn/products/">Sản phẩm</a></li>
+                <li><a href="./vn/blogs/">Blog</a></li>
+                <li><a href="./vn/about/">Về chúng tôi</a></li>
+                <li><a href="vn/contact/">Báo giá</a></li>
             </ul>
 
             <div class="nav-actions">
@@ -80,8 +103,8 @@
                 <h1>Ván ép Tiêu chuẩn <br> Giải pháp cho Sản xuất <br> Quy mô lớn</h1>
                 <p>Chất lượng ổn định · Sản xuất chủ động · Tiêu chuẩn thị trường<br> Giao hàng đúng tiến độ · Tiết kiệm chi phí</p>
                 <div class="hero-btns">
-                    <a href="vn/contact/index.html" class="btn-hero btn-contact-hero">Liên hệ chúng tôi</a>
-                    <a href="./assets/images/chat_luong.svg" download class="btn-hero btn-catalog-hero">Tải Catalog</a>
+                    <a href="vn/contact/" class="btn-hero btn-contact-hero">Liên hệ chúng tôi</a>
+                    <a href="./assets/files/catalog_vn.pdf" download class="btn-hero btn-catalog-hero">Tải Catalog</a>
                 </div>
             </div>
         </div>
@@ -139,7 +162,7 @@
                 </div>
             </div>
 
-            <a href="./vn/about/index.html" class="btn-about-more">Hiểu thêm về chúng tôi</a>
+            <a href="./vn/about/" class="btn-about-more">Hiểu thêm về chúng tôi</a>
         </div>
 
     </div>
@@ -156,7 +179,7 @@
                 </p>
             </div>
             <div class="header-right">
-                <a href="./vn/products/index.html" class="view-all-link">
+                <a href="./vn/products/" class="view-all-link">
                     Xem toàn bộ sản phẩm <i class="fa-solid fa-arrow-right-long"></i>
                 </a>
             </div>
@@ -355,24 +378,24 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label>Họ & Tên</label>
-                            <input type="text" placeholder="John Doe">
+                            <input type="text" name="name"  placeholder="John Doe">
                         </div>
                         <div class="form-group">
                             <label>Tên công ty</label>
-                            <input type="text" placeholder="Construction Co.">
+                            <input type="text" name="ctyName" placeholder="Construction Co.">
                         </div>
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="email" placeholder="name@company.com">
+                        <input type="email" name="email"  placeholder="name@company.com">
                     </div>
                     <div class="form-group">
                         <label>SĐT</label>
-                        <input type="tel" placeholder="+1 (555) 000-0000">
+                        <input type="tel" name="tel" placeholder="+1 (555) 000-0000">
                     </div>
                     <div class="form-group">
                         <label>Yêu cầu báo giá</label>
-                        <textarea placeholder="Mô tả nhu cầu của bạn" rows="4"></textarea>
+                        <textarea name="content" placeholder="Mô tả nhu cầu của bạn" rows="4"></textarea>
                     </div>
                     <button type="submit" class="btn-submit">Yêu cầu báo giá</button>
                 </form>
