--- a/vn/products/film-faced.html
+++ b/vn/products/film-faced.html
@@ -28,26 +28,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 
-
     <script type="application/ld+json">
         {
-            "@context": "https://schema.org/",
+            "@context": "https://schema.org",
             "@type": "Product",
-            "name": "Ván ép mặt Bintangor",
+            "name": "Ván ép phủ phim",
+            "alternateName": "Film Faced Plywood",
             "image": [
-                "../../assets/images/bintagor_1.png",
-                "../../assets/images/bintagor_2.png",
-                "../../assets/images/bintagor_3.png",
-                "../../assets/images/bintagor_4.png",
-                "../../assets/images/bintagor_5.png"
+                "../../assets/images/phu_phim_1.png",
+                "../../assets/images/phu_phim_2.png",
+                "../../assets/images/phu_phim_3.png",
+                "../../assets/images/phu_phim_4.png",
+                "../../assets/images/phu_phim_5.png"
             ],
-            "description": "Ván ép mặt Bintangor có bề mặt màu nâu đỏ tự nhiên, vân gỗ nhẹ, dễ gia công và phù hợp cho sản xuất nội thất, bao bì và xuất khẩu số lượng lớn.",
-            "sku": "BINTANGOR-PLYWOOD",
+            "description": "Ván ép phủ phim là loại ván ép dùng trong xây dựng, đặc biệt cho cốp pha bê tông. Bề mặt phủ phim phenolic giúp chống nước, chống bám bẩn, độ bền cao và có thể tái sử dụng nhiều lần.",
+            "sku": "FILM-FACED-PLYWOOD",
             "brand": {
                 "@type": "Brand",
                 "name": "VietPlywood"
             },
-            "material": "Gỗ keo, veneer Bintangor",
+            "material": "Gỗ keo, keo phenolic / melamine",
             "additionalProperty": [
                 {
                     "@type": "PropertyValue",
@@ -57,22 +57,27 @@
                 {
                     "@type": "PropertyValue",
                     "name": "Độ dày",
-                    "value": "3 – 20 mm"
+                    "value": "12 – 18 mm"
                 },
                 {
                     "@type": "PropertyValue",
-                    "name": "Loại mặt phủ",
-                    "value": "AA / AB / BB"
+                    "name": "Mặt phim",
+                    "value": "Phim đen / Phim nâu"
                 },
                 {
                     "@type": "PropertyValue",
                     "name": "Loại keo",
-                    "value": "Keo E2"
+                    "value": "Keo WBP / MR (Keo Min 10%)"
+                },
+                {
+                    "@type": "PropertyValue",
+                    "name": "Ứng dụng",
+                    "value": "Cốp pha bê tông, sàn giàn giáo, sàn xe container"
                 }
             ],
             "offers": {
                 "@type": "Offer",
-                "url": "https://yourdomain.com/van-ep-mat-bintangor.html",
+                "url": "https://yourdomain.com/van-ep-phu-phim.html",
                 "priceCurrency": "VND",
                 "availability": "https://schema.org/InStock",
                 "priceSpecification": {
@@ -83,9 +88,6 @@
             }
         }
     </script>
-
-
-
 
     <link rel="stylesheet" href="../../assets/css/base.css">
     <link rel="stylesheet" href="../../assets/css/product_detail.css">
@@ -137,7 +139,7 @@
         <div class="container">
             <a href="../../index.html">Trang chủ</a> /
             <a href="./">Sản phẩm</a> /
-            <span>Ván ép mặt Bintangor</span>
+            <span>Ván ép phủ phim</span>
         </div>
     </section>
 
@@ -147,38 +149,32 @@
 
             <!-- Gallery -->
             <div class="product-gallery">
-
                 <div class="gallery-wrapper">
                     <button class="gallery-btn prev">‹</button>
-
-                    <img
-                            class="product-main-image"
-                            src="../../assets/images/bintagor_1.png"
-                            alt="Ván ép mặt Bintangor">
-
+                    <img class="product-main-image"
+                         src="../../assets/images/phu_phim_1.png"
+                         alt="Ván ép phủ phim">
                     <button class="gallery-btn next">›</button>
                 </div>
 
                 <div class="product-thumbs">
-                    <img src="../../assets/images/bintagor_1.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_2.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_3.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_4.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_5.png" alt="Ván ép mặt Bintangor">
+                    <img src="../../assets/images/phu_phim_1.png" alt="Ván ép phủ phim">
+                    <img src="../../assets/images/phu_phim_2.png" alt="Ván ép phủ phim">
+                    <img src="../../assets/images/phu_phim_3.png" alt="Ván ép phủ phim">
+                    <img src="../../assets/images/phu_phim_4.png" alt="Ván ép phủ phim">
+                    <img src="../../assets/images/phu_phim_5.png" alt="Ván ép phủ phim">
                 </div>
             </div>
 
-
             <!-- Info -->
             <div class="product-info">
-                <h1>Ván ép mặt Bintangor</h1>
-                <span class="product-tag">#bintangor</span>
+                <h1>Ván ép phủ phim</h1>
+                <span class="product-tag">#filmfaced #plywood</span>
 
                 <p class="product-desc">
-                    Ván ép mặt Bintangor là loại ván ép được phủ một lớp veneer Bintangor tự nhiên trên bề mặt, mang đến độ thẩm mỹ cao và khả năng chống trầy xước tốt, giúp tấm ván bền chắc và phù hợp cho nhiều ứng dụng nội thất – xây dựng
+                    Ván ép phủ phim là loại ván ép được phủ một lớp phim bảo vệ trên bề mặt, thường là phim phenolic hoặc melamine, giúp tăng cường độ bền và khả năng chịu nước.
                 </p>
 
-                <!-- Quick specs -->
                 <div class="product-quick-spec">
 
                     <div class="spec-group">
@@ -201,11 +197,10 @@
                     <div class="spec-group">
                         <label>Độ dày</label>
                         <div class="spec-options">
-                            <button class="spec-btn">13mm – 8 lớp</button>
+                            <button class="spec-btn">12mm – 7 lớp</button>
+                            <button class="spec-btn">14mm – 9 lớp</button>
                             <button class="spec-btn">15mm – 9 lớp</button>
-                            <button class="spec-btn">17mm – 11 lớp</button>
-                            <button class="spec-btn">20mm – 13 lớp</button>
-                            <button class="spec-btn">3mm – 3 lớp</button>
+                            <button class="spec-btn">18mm – 11 lớp</button>
                             <button class="spec-btn">Theo yêu cầu</button>
                         </div>
                     </div>
@@ -232,46 +227,29 @@
     <section class="product-detail-content">
         <div class="container">
 
-            <!-- Thông số chi tiết -->
+            <!-- Thông số -->
             <div class="tab-content active" id="tab-spec">
                 <div class="product-detail-bottom">
 
                     <div class="product-spec-table">
                         <h3>Thông số kỹ thuật</h3>
                         <table>
-                            <tr>
-                                <td>Loại lõi</td>
-                                <td>Gỗ keo</td>
-                            </tr>
-                            <tr>
-                                <td>Loại keo</td>
-                                <td>Keo E2</td>
-                            </tr>
-                            <tr>
-                                <td>Dung sai độ dày</td>
-                                <td>± 0.5 mm</td>
-                            </tr>
-                            <tr>
-                                <td>Loại mặt phủ</td>
-                                <td>AA / AB / BB</td>
-                            </tr>
-                            <tr>
-                                <td>Kích thước</td>
-                                <td>1220 × 2440mm</td>
-                            </tr>
-                            <tr>
-                                <td>Độ dày</td>
-                                <td>3 – 20mm</td>
-                            </tr>
+                            <tr><td>Loại lõi</td><td>Gỗ keo</td></tr>
+                            <tr><td>Loại keo</td><td>Keo Min 10%</td></tr>
+                            <tr><td>Dung sai độ dày</td><td>± 0.5 mm</td></tr>
+                            <tr><td>Mặt phim</td><td>AA/AB/BB</td></tr>
+                            <tr><td>Kích thước</td><td>1220 × 2440mm</td></tr>
+                            <tr><td>Độ dày</td><td>12 – 18mm</td></tr>
                             <tr>
                                 <td>Đặc điểm nổi bật</td>
                                 <td>
                                     <ul>
-                                        <li>- Độ bền cao, chịu lực tốt trong quá trình sử dụng</li>
-                                        <li>- Bề mặt ổn định, màu sắc giữ đều theo thời gian</li>
-                                        <li>- Dễ thi công, lắp đặt và gia công</li>
-                                        <li>- Khả năng chịu nhiệt ổn định</li>
-                                        <li>- Không bị ảnh hưởng bởi các hóa chất thông thường</li>
+                                        <li> – Bề mặt phủ phim chống nước, chống bám bẩn</li>
+                                        <li> – Độ bền cao, chịu lực tốt trong quá trình thi công</li>
+                                        <li> – Bề mặt phẳng, không dính bê tông, dễ vệ sinh và tái sử dụng</li>
+                                        <li> – Khả năng chống mài mòn tốt, thích hợp cho các khu vực tải trọng lớn</li>
+                                        <li> – Thi công đơn giản, phù hợp nhiều mục đích sử dụng</li>
+                                        <li> – Ổn định trong môi trường nhiệt độ và độ ẩm thay đổi</li>
                                     </ul>
                                 </td>
                             </tr>
@@ -281,67 +259,73 @@
                     <div class="product-applications">
                         <h3>Ứng dụng thực tế</h3>
                         <div class="app-tags">
-                            <div class="app-tag">
-                                <img src="../../assets/images/ghe.png" alt="">
-                                <span>Nội thất</span>
-                            </div>
-                            <div class="app-tag">
-                                <img src="../../assets/images/tu.png" alt="">
-                                <span>Tủ kệ</span>
-                            </div>
-                            <div class="app-tag">
-                                <img src="../../assets/images/vach_ngan.png" alt="">
-                                <span>Vách ngăn</span>
-                            </div>
-                            <div class="app-tag">
-                                <img src="../../assets/images/sua_chua.png" alt="">
-                                <span>Xây dựng nhẹ</span>
-                            </div>
+                            <div class="app-tag"><img src="../../assets/images/ghe.png"><span>Cốp pha</span></div>
+                            <div class="app-tag"><img src="../../assets/images/san_gian_giao.svg"><span>Sàn giàn giáo</span></div>
+                            <div class="app-tag"><img src="../../assets/images/vach_ngan.png"><span>Sàn xe, container</span></div>
+                            <div class="app-tag"><img src="../../assets/images/sua_chua.png"><span>Cốp pha bê tông</span></div>
                         </div>
                     </div>
 
                 </div>
             </div>
 
-            <!-- Đặc điểm chung -->
+            <!-- Đặc điểm -->
             <div class="tab-content" id="tab-feature">
-                <h2>VÁN ÉP MẶT BINTANGOR</h2>
+                <h2>VÁN ÉP PHỦ PHIM</h2>
 
                 <p>
-                    Ván ép mặt Bintangor từ lâu đã trở thành lựa chọn quen thuộc của các xưởng nội thất, nhà máy bao bì và doanh nghiệp sản xuất đồ gỗ. Với lợi thế giá thành cạnh tranh, màu sắc ổn định, bề mặt dễ xử lý, dòng ván này mang lại sự cân bằng tốt giữa chi phí – thẩm mỹ – độ bền, đặc biệt phù hợp cho các thị trường yêu cầu số lượng lớn và mức giá tối ưu.
+                    Ván ép phủ phim (Film Faced Plywood) là một trong những loại ván ép được sử dụng phổ biến nhất trong ngành xây dựng nhờ khả năng chịu nước tốt, bề mặt phẳng, độ bền cao và tái sử dụng nhiều lần. Đây là vật liệu quan trọng trong hệ cốp pha bê tông, giúp tối ưu chi phí và đảm bảo chất lượng bề mặt công trình.
                 </p>
 
-                <h3>1. Đặc điểm bề mặt của ván ép Bintangor</h3>
-                <p>
-                    Veneer Bintangor sở hữu sắc nâu đỏ tự nhiên, vân gỗ nhẹ, tạo hiệu ứng đẹp khi sơn hoặc phủ PU. Bề mặt khá “dễ tính”, không đòi hỏi nhiều công đoạn xử lý nên giúp doanh nghiệp tiết kiệm thời gian và chi phí sản xuất.
-                </p>
-                <p>
-                    Đây cũng là dòng ván có trọng lượng vừa phải, dễ cắt ghép và không làm cùn lưỡi cưa nhanh như các loại gỗ cứng.
-                </p>
-
-                <h3>2. Ưu điểm nổi bật của ván Bintangor trong sản xuất
+                <h3>1. Ván ép phủ phim là gì?
                 </h3>
                 <p>
-                    Điểm mạnh của ván Bintangor nằm ở khả năng đáp ứng đa dạng nhu cầu. Dòng ván này có thể sản xuất theo nhiều tiêu chuẩn độ bền, từ keo trung bình cho bao bì đến keo chất lượng cao cho nội thất. Ván ít cong vênh, tỷ lệ lỗi mặt thấp nếu được sản xuất từ lõi gỗ keo – bạch đàn sấy kỹ.
+                    Ván ép phủ phim là loại plywood được tạo từ nhiều lớp gỗ veneer ép chặt với keo chịu nước như keo phenolic (WBP) hoặc keo melamine (MR). Hai mặt tấm ván được phủ lớp film phenolic đen hoặc nâu, giúp chống thấm, chống trầy xước và hạn chế bám bẩn trong quá trình thi công. Đây là loại ván ép được ưa chuộng trong các công trình dân dụng và công nghiệp.
 
                 </p>
 
-                <h3>3. Vì sao doanh nghiệp nên chọn ván Bintangor trong sản xuất?
+                <h3>2. Cấu tạo của ván ép phủ phim
                 </h3>
+                <p>
+                    Cấu trúc của ván gồm lõi gỗ keo hoặc bạch đàn, được sấy đạt độ ẩm tiêu chuẩn trước khi ép nóng. Các lớp veneer được liên kết bằng keo WBP hoặc MR tùy mục đích sử dụng. Bên ngoài là lớp phim phủ 120–220g/m² giúp tăng khả năng chống nước, bảo vệ lõi gỗ và giữ bề mặt tấm ván luôn phẳng – bóng.
+
+                </p>
+
+                <h3>3. Ưu điểm nổi bật của ván ép phủ phim
+                </h3>
+                <p>
+                    Ván phủ phim được đánh giá cao nhờ độ bền cơ lý tốt, chống thấm hiệu quả, ít cong vênh và có khả năng tái sử dụng từ 6–10 lần tùy chất lượng. Bề mặt phim giúp tạo ra mặt bê tông mịn, đẹp, giảm thiểu công đoạn trát sửa sau khi tháo cốp pha.
+
+                </p>
+                <p>
+                    Đây là lý do dòng sản phẩm này được các nhà thầu lựa chọn cho những công trình yêu cầu độ chính xác và tính thẩm mỹ cao.
+
+                </p>
+                <h3>4. Phân loại các dòng ván ép phủ phim phổ biến
+                </h3>
+                <p>Trên thị trường có nhiều loại ván phủ phim khác nhau như:
+                </p>
                 <ul>
-                    <li>- Giá thành cạnh tranh, phù hợp sản xuất số lượng lớn
-                    </li>
-                    <li>- Dễ thi công, thời gian xử lý nhanh
-                    </li>
-                    <li>- Tính thẩm mỹ ổn định, dễ sơn và phối màu
-                    </li>
-                    <li>- Nguồn cung dồi dào, phù hợp đơn hàng container
-                    </li>
-                    <li>
-                        - Đây là lựa chọn lý tưởng cho doanh nghiệp cần vật liệu ổn định, giá tốt và dễ triển khai hàng loạt.
+                    <li>  - Ván ép phủ phim keo WBP (chịu nước mạnh, tái sử dụng nhiều lần) </li>
+                    <li>  - Ván ép phủ phim keo MR (giá tốt, phù hợp công trình ngắn hạn) </li>
+                    <li>  - Ván ép phủ phim đen / nâu </li>
+                    <li>  - Ván phủ phim mặt mịn hoặc mặt chống trượt (anti-slip) </li>
 
-                    </li>
                 </ul>
+
+                <h3>5. Tiêu chí quan trọng khi chọn mua ván ép phủ phim
+                </h3>
+                <p>
+                    Chất lượng ván ép phụ thuộc vào nhiều yếu tố như: độ dày thực, độ cứng lõi, độ ẩm, loại keo, màu phim, độ kết dính và khả năng chống nước. Khách hàng B2B nên ưu tiên nhà sản xuất có quy trình kiểm soát chất lượng chặt chẽ, đảm bảo tấm ván phẳng, ít rỗng, ít mắt chết và đáp ứng đúng tiêu chuẩn yêu cầu của từng thị trường.
+
+                </p>
+
+                <h3>6. Ván ép phủ phim và tiêu chuẩn xuất khẩu
+                </h3>
+                <p>
+                    Đối với thị trường quốc tế như Hàn Quốc, Nhật Bản hay Malaysia, ván phủ phim phải đáp ứng các yêu cầu nghiêm ngặt về độ bền kéo, độ ổn định lõi, độ bám keo và độ đồng đều màu phim. Doanh nghiệp xuất khẩu cần cung cấp đầy đủ chứng từ như CO, CQ, packing list và hỗ trợ kiểm định theo yêu cầu.
+
+                </p>
             </div>
 
         </div>
@@ -354,10 +338,10 @@
 
             <div class="products-grid">
 
-                <a href="film-faced.html" class="product-link">
+                <a href="bintagor.html" class="product-link">
                     <article class="product-card">
-                        <img src="../../assets/images/phu_phim_1.png" alt="">
-                        <h4>Ván ép phủ phim</h4>
+                        <img src="../../assets/images/bintagor_1.png" alt="">
+                        <h4>Ván ép mặt Bintangor</h4>
                     </article>
                 </a>
 
@@ -387,6 +371,7 @@
     </section>
 
 </div>
+
 
 
 <footer class="footer-section">
