--- a/vn/products/index.html
+++ b/vn/products/index.html
@@ -191,7 +191,7 @@
                     </li>
                 </ul>
 
-                <a href="./bintagor.html" class="btn-detail">Xem chi tiết</a>
+                <a href="./film-faced.html" class="btn-detail">Xem chi tiết</a>
             </article>
 
             <article class="product-card">
@@ -220,7 +220,7 @@
                     </li>
                 </ul>
 
-                <a href="product_2.html" class="btn-detail">Xem chi tiết</a>
+                <a href="./bintagor.html" class="btn-detail">Xem chi tiết</a>
             </article>
 
             <article class="product-card">
@@ -249,11 +249,11 @@
                     </li>
                 </ul>
 
-                <a href="product_1.html" class="btn-detail">Xem chi tiết</a>
+                <a href="./okoume.html" class="btn-detail">Xem chi tiết</a>
             </article>
 
             <article class="product-card">
-                <img src="../../assets/images/phu_phim_1.png" alt="Ván ép mặt trắngVán ép phủ phim">
+                <img src="../../assets/images/phu_phim_1.png" alt="Ván ép mặt trắng">
 
                 <h3>"Ván ép mặt trắng</h3>
                 <p>
@@ -278,7 +278,7 @@
                     </li>
                 </ul>
 
-                <a href="product_1.html" class="btn-detail">Xem chi tiết</a>
+                <a href="./white-face.html" class="btn-detail">Xem chi tiết</a>
             </article>
 
             <article class="product-card">
@@ -307,7 +307,7 @@
                     </li>
                 </ul>
 
-                <a href="product_1.html" class="btn-detail">Xem chi tiết</a>
+                <a href="./veneer.html" class="btn-detail">Xem chi tiết</a>
             </article>
 
 
