--- a/vn/products/veneer.html
+++ b/vn/products/veneer.html
@@ -28,26 +28,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 
-
     <script type="application/ld+json">
         {
-            "@context": "https://schema.org/",
+            "@context": "https://schema.org",
             "@type": "Product",
-            "name": "Ván ép mặt Bintangor",
+            "name": "Ván ép phủ phim",
+            "alternateName": "Film Faced Plywood",
             "image": [
-                "../../assets/images/bintagor_1.png",
-                "../../assets/images/bintagor_2.png",
-                "../../assets/images/bintagor_3.png",
-                "../../assets/images/bintagor_4.png",
-                "../../assets/images/bintagor_5.png"
+                "../../assets/images/okoume1.png",
+                "../../assets/images/okoume2.png",
+                "../../assets/images/okoume3.png",
+                "../../assets/images/okoume4.png",
+                "../../assets/images/okoume5.png"
             ],
-            "description": "Ván ép mặt Bintangor có bề mặt màu nâu đỏ tự nhiên, vân gỗ nhẹ, dễ gia công và phù hợp cho sản xuất nội thất, bao bì và xuất khẩu số lượng lớn.",
-            "sku": "BINTANGOR-PLYWOOD",
+            "description": "Ván ép phủ phim là loại ván ép dùng trong xây dựng, đặc biệt cho cốp pha bê tông. Bề mặt phủ phim phenolic giúp chống nước, chống bám bẩn, độ bền cao và có thể tái sử dụng nhiều lần.",
+            "sku": "FILM-FACED-PLYWOOD",
             "brand": {
                 "@type": "Brand",
                 "name": "VietPlywood"
             },
-            "material": "Gỗ keo, veneer Bintangor",
+            "material": "Gỗ keo, keo phenolic / melamine",
             "additionalProperty": [
                 {
                     "@type": "PropertyValue",
@@ -57,22 +57,27 @@
                 {
                     "@type": "PropertyValue",
                     "name": "Độ dày",
-                    "value": "3 – 20 mm"
+                    "value": "12 – 18 mm"
                 },
                 {
                     "@type": "PropertyValue",
-                    "name": "Loại mặt phủ",
-                    "value": "AA / AB / BB"
+                    "name": "Mặt phim",
+                    "value": "Phim đen / Phim nâu"
                 },
                 {
                     "@type": "PropertyValue",
                     "name": "Loại keo",
-                    "value": "Keo E2"
+                    "value": "Keo WBP / MR (Keo Min 10%)"
+                },
+                {
+                    "@type": "PropertyValue",
+                    "name": "Ứng dụng",
+                    "value": "Cốp pha bê tông, sàn giàn giáo, sàn xe container"
                 }
             ],
             "offers": {
                 "@type": "Offer",
-                "url": "https://yourdomain.com/van-ep-mat-bintangor.html",
+                "url": "https://yourdomain.com/van-ep-phu-phim.html",
                 "priceCurrency": "VND",
                 "availability": "https://schema.org/InStock",
                 "priceSpecification": {
@@ -83,9 +88,6 @@
             }
         }
     </script>
-
-
-
 
     <link rel="stylesheet" href="../../assets/css/base.css">
     <link rel="stylesheet" href="../../assets/css/product_detail.css">
@@ -137,7 +139,7 @@
         <div class="container">
             <a href="../../index.html">Trang chủ</a> /
             <a href="./">Sản phẩm</a> /
-            <span>Ván ép mặt Bintangor</span>
+            <span>Ván ép mặt xoan Veneer</span>
         </div>
     </section>
 
@@ -147,38 +149,32 @@
 
             <!-- Gallery -->
             <div class="product-gallery">
-
                 <div class="gallery-wrapper">
                     <button class="gallery-btn prev">‹</button>
-
-                    <img
-                            class="product-main-image"
-                            src="../../assets/images/bintagor_1.png"
-                            alt="Ván ép mặt Bintangor">
-
+                    <img class="product-main-image"
+                         src="../../assets/images/veneer_1.png"
+                         alt="Ván ép mặt xoan Veneer">
                     <button class="gallery-btn next">›</button>
                 </div>
 
                 <div class="product-thumbs">
-                    <img src="../../assets/images/bintagor_1.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_2.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_3.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_4.png" alt="Ván ép mặt Bintangor">
-                    <img src="../../assets/images/bintagor_5.png" alt="Ván ép mặt Bintangor">
+                    <img src="../../assets/images/veneer_1.png" alt="Ván ép mặt xoan Veneer">
+                    <img src="../../assets/images/veneer_2.png" alt="Ván ép mặt xoan Veneer">
+                    <img src="../../assets/images/veneer_3.png" alt="Ván ép mặt xoan Veneer">
+                    <img src="../../assets/images/veneer_4.png" alt="Ván ép mặt xoan Veneer">
+                    <img src="../../assets/images/veneer_5.png" alt="Ván ép mặt xoan Veneer">
                 </div>
             </div>
 
-
             <!-- Info -->
             <div class="product-info">
-                <h1>Ván ép mặt Bintangor</h1>
-                <span class="product-tag">#bintangor</span>
+                <h1>Ván ép mặt xoan Veneer</h1>
+                <span class="product-tag">#Veneer</span>
 
                 <p class="product-desc">
                     Ván ép mặt Bintangor là loại ván ép được phủ một lớp veneer Bintangor tự nhiên trên bề mặt, mang đến độ thẩm mỹ cao và khả năng chống trầy xước tốt, giúp tấm ván bền chắc và phù hợp cho nhiều ứng dụng nội thất – xây dựng
                 </p>
 
-                <!-- Quick specs -->
                 <div class="product-quick-spec">
 
                     <div class="spec-group">
@@ -201,11 +197,14 @@
                     <div class="spec-group">
                         <label>Độ dày</label>
                         <div class="spec-options">
+                            <button class="spec-btn">2mm – 3 lớp</button>
+                            <button class="spec-btn">5mm – 3 lớp</button>
+                            <button class="spec-btn">8mm – 5 lớp</button>
+                            <button class="spec-btn">11mm – 7 lớp</button>
                             <button class="spec-btn">13mm – 8 lớp</button>
                             <button class="spec-btn">15mm – 9 lớp</button>
-                            <button class="spec-btn">17mm – 11 lớp</button>
-                            <button class="spec-btn">20mm – 13 lớp</button>
-                            <button class="spec-btn">3mm – 3 lớp</button>
+                            <button class="spec-btn">17mm – 10 lớp</button>
+                            <button class="spec-btn">20mm – 11 lớp</button>
                             <button class="spec-btn">Theo yêu cầu</button>
                         </div>
                     </div>
@@ -232,46 +231,28 @@
     <section class="product-detail-content">
         <div class="container">
 
-            <!-- Thông số chi tiết -->
+            <!-- Thông số -->
             <div class="tab-content active" id="tab-spec">
                 <div class="product-detail-bottom">
 
                     <div class="product-spec-table">
                         <h3>Thông số kỹ thuật</h3>
                         <table>
-                            <tr>
-                                <td>Loại lõi</td>
-                                <td>Gỗ keo</td>
-                            </tr>
-                            <tr>
-                                <td>Loại keo</td>
-                                <td>Keo E2</td>
-                            </tr>
-                            <tr>
-                                <td>Dung sai độ dày</td>
-                                <td>± 0.5 mm</td>
-                            </tr>
-                            <tr>
-                                <td>Loại mặt phủ</td>
-                                <td>AA / AB / BB</td>
-                            </tr>
-                            <tr>
-                                <td>Kích thước</td>
-                                <td>1220 × 2440mm</td>
-                            </tr>
-                            <tr>
-                                <td>Độ dày</td>
-                                <td>3 – 20mm</td>
-                            </tr>
+                            <tr><td>Loại lõi</td><td>Gỗ keo</td></tr>
+                            <tr><td>Loại keo</td><td>Keo E2</td></tr>
+                            <tr><td>Dung sai độ dày</td><td>± 0.5 mm</td></tr>
+                            <tr><td>Mặt phim</td><td>AA/AB/BB</td></tr>
+                            <tr><td>Kích thước</td><td>1220 × 2440mm</td></tr>
+                            <tr><td>Độ dày</td><td>3 – 30mm</td></tr>
                             <tr>
                                 <td>Đặc điểm nổi bật</td>
                                 <td>
                                     <ul>
-                                        <li>- Độ bền cao, chịu lực tốt trong quá trình sử dụng</li>
-                                        <li>- Bề mặt ổn định, màu sắc giữ đều theo thời gian</li>
-                                        <li>- Dễ thi công, lắp đặt và gia công</li>
-                                        <li>- Khả năng chịu nhiệt ổn định</li>
-                                        <li>- Không bị ảnh hưởng bởi các hóa chất thông thường</li>
+                                        <li> – Bề mặt veneer xoan vân đẹp, màu tự nhiên, dễ hoàn thiện</li>
+                                        <li> – Kết cấu ván ổn định, hạn chế cong vênh khi gia công</li>
+                                        <li> – Dễ bám sơn và xử lý bề mặt, phù hợp nhiều phong cách nội thất</li>
+                                        <li> – Thi công lắp đặt đơn giản, tương thích nhiều mục đích sử dụng</li>
+                                        <li> – Bám phụ kiện tốt, hỗ trợ hoàn thiện sản phẩm sắc nét</li>
                                     </ul>
                                 </td>
                             </tr>
@@ -281,67 +262,55 @@
                     <div class="product-applications">
                         <h3>Ứng dụng thực tế</h3>
                         <div class="app-tags">
-                            <div class="app-tag">
-                                <img src="../../assets/images/ghe.png" alt="">
-                                <span>Nội thất</span>
-                            </div>
-                            <div class="app-tag">
-                                <img src="../../assets/images/tu.png" alt="">
-                                <span>Tủ kệ</span>
-                            </div>
-                            <div class="app-tag">
-                                <img src="../../assets/images/vach_ngan.png" alt="">
-                                <span>Vách ngăn</span>
-                            </div>
-                            <div class="app-tag">
-                                <img src="../../assets/images/sua_chua.png" alt="">
-                                <span>Xây dựng nhẹ</span>
-                            </div>
+                            <div class="app-tag"><img src="../../assets/images/ghe.png" alt=""><span>Giường ngủ</span></div>
+                            <div class="app-tag"><img src="../../assets/images/tu.png" alt=""><span>Tủ quần áo</span></div>
+                            <div class="app-tag"><img src="../../assets/images/sach.svg" alt=""><span>Bìa tạp chí</span></div>
+                            <div class="app-tag"><img src="../../assets/images/bang.svg" alt=""><span>Bảng viết</span></div>
                         </div>
                     </div>
 
                 </div>
             </div>
 
-            <!-- Đặc điểm chung -->
+            <!-- Đặc điểm -->
             <div class="tab-content" id="tab-feature">
-                <h2>VÁN ÉP MẶT BINTANGOR</h2>
+                <h2>VÁN ÉP MẶT XOAN VENEER</h2>
 
                 <p>
-                    Ván ép mặt Bintangor từ lâu đã trở thành lựa chọn quen thuộc của các xưởng nội thất, nhà máy bao bì và doanh nghiệp sản xuất đồ gỗ. Với lợi thế giá thành cạnh tranh, màu sắc ổn định, bề mặt dễ xử lý, dòng ván này mang lại sự cân bằng tốt giữa chi phí – thẩm mỹ – độ bền, đặc biệt phù hợp cho các thị trường yêu cầu số lượng lớn và mức giá tối ưu.
+                    Ván ép mặt xoan mang lại vẻ đẹp tự nhiên với sắc gỗ ấm, vân mềm, phù hợp với các thiết kế nội thất gia đình, showroom hay các sản phẩm yêu cầu tính thẩm mỹ cao. Veneer xoan tạo cảm giác sang trọng nhưng vẫn gần gũi – điều khiến dòng ván này được nhiều kiến trúc sư yêu thích.
+
+
                 </p>
 
-                <h3>1. Đặc điểm bề mặt của ván ép Bintangor</h3>
-                <p>
-                    Veneer Bintangor sở hữu sắc nâu đỏ tự nhiên, vân gỗ nhẹ, tạo hiệu ứng đẹp khi sơn hoặc phủ PU. Bề mặt khá “dễ tính”, không đòi hỏi nhiều công đoạn xử lý nên giúp doanh nghiệp tiết kiệm thời gian và chi phí sản xuất.
-                </p>
-                <p>
-                    Đây cũng là dòng ván có trọng lượng vừa phải, dễ cắt ghép và không làm cùn lưỡi cưa nhanh như các loại gỗ cứng.
-                </p>
-
-                <h3>2. Ưu điểm nổi bật của ván Bintangor trong sản xuất
+                <h3>1. Đặc điểm của veneer xoan
                 </h3>
                 <p>
-                    Điểm mạnh của ván Bintangor nằm ở khả năng đáp ứng đa dạng nhu cầu. Dòng ván này có thể sản xuất theo nhiều tiêu chuẩn độ bền, từ keo trung bình cho bao bì đến keo chất lượng cao cho nội thất. Ván ít cong vênh, tỷ lệ lỗi mặt thấp nếu được sản xuất từ lõi gỗ keo – bạch đàn sấy kỹ.
+                    Veneer xoan có tông màu nâu vàng hoặc nâu ấm, rất dễ lên màu khi phủ PU. Vân xoan mềm, hài hòa, mang lại cảm giác cao cấp hơn so với nhiều loại veneer phổ thông.
+
 
                 </p>
 
-                <h3>3. Vì sao doanh nghiệp nên chọn ván Bintangor trong sản xuất?
+                <h3>2. Ưu điểm vượt trội
+
                 </h3>
                 <ul>
-                    <li>- Giá thành cạnh tranh, phù hợp sản xuất số lượng lớn
-                    </li>
-                    <li>- Dễ thi công, thời gian xử lý nhanh
-                    </li>
-                    <li>- Tính thẩm mỹ ổn định, dễ sơn và phối màu
-                    </li>
-                    <li>- Nguồn cung dồi dào, phù hợp đơn hàng container
-                    </li>
-                    <li>
-                        - Đây là lựa chọn lý tưởng cho doanh nghiệp cần vật liệu ổn định, giá tốt và dễ triển khai hàng loạt.
+                    <li>- Tính thẩm mỹ cao, vân đẹp</li>
+                    <li>- Phù hợp nhiều phong cách nội thất</li>
+                    <li>- Dễ xử lý và hoàn thiện</li>
+                    <li>- Có thể sản xuất theo nhiều tiêu chuẩn keo</li>
 
-                    </li>
                 </ul>
+                <p>
+                    Đây là lựa chọn lý tưởng cho các dự án cần vật liệu vừa bền vừa đẹp.
+
+                </p>
+
+                <h3>3. Lợi thế trong sản xuất và xuất khẩu
+
+                </h3>
+                <p>
+                    Do veneer xoan có độ phổ biến cao, doanh nghiệp dễ dàng đặt hàng số lượng lớn và linh hoạt tiêu chuẩn kỹ thuật. Dòng ván này cũng phù hợp nhiều thị trường, đặc biệt tại châu Á và Trung Đông.
+                </p>
             </div>
 
         </div>
@@ -353,6 +322,13 @@
             <h3>Sản phẩm liên quan</h3>
 
             <div class="products-grid">
+
+                <a href="bintagor.html" class="product-link">
+                    <article class="product-card">
+                        <img src="../../assets/images/bintagor_1.png" alt="">
+                        <h4>Ván ép mặt Bintangor</h4>
+                    </article>
+                </a>
 
                 <a href="film-faced.html" class="product-link">
                     <article class="product-card">
@@ -367,7 +343,6 @@
                         <h4>Ván ép mặt Okoume</h4>
                     </article>
                 </a>
-
                 <a href="white-face.html" class="product-link">
                     <article class="product-card">
                         <img src="../../assets/images/mat_trang_1.png" alt="">
@@ -375,19 +350,12 @@
                     </article>
                 </a>
 
-                <a href="veneer.html" class="product-link">
-                    <article class="product-card">
-                        <img src="../../assets/images/veneer_1.png" alt="">
-                        <h4>Ván ép mặt xoan Veneer</h4>
-                    </article>
-                </a>
 
             </div>
         </div>
     </section>
 
 </div>
-
 
 <footer class="footer-section">
     <div class="container">
