--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 
         <div class="products-grid">
             <div class="product-card">
+                <a href="./vn/products/film-faced.html">
                 <div class="product-img-wrapper">
                     <img src="./assets/images/van_ep_phu_phim_1.png" alt="Ván ép phủ phim">
                 </div>
@@ -197,9 +198,11 @@
                         <span>12mm</span><span>14mm</span><span>15mm</span><span>18mm</span>
                     </div>
                 </div>
+                </a>
             </div>
 
             <div class="product-card">
+                <a href="./vn/products/bintagor.html">
                 <div class="product-img-wrapper">
                     <img src="./assets/images/van_ep_mat_bintagor_1.png" alt="Ván ép mặt Bintangor">
                 </div>
@@ -210,9 +213,11 @@
                         <span>3mm</span><span>8mm</span><span>11mm</span><span>13mm</span><span>15mm</span><span>20mm</span>
                     </div>
                 </div>
+                </a>
             </div>
 
             <div class="product-card">
+                <a href="./vn/products/white-face.html">
                 <div class="product-img-wrapper">
                     <img src="./assets/images/van_ep_mat_trang_1.png" alt="Ván ép mặt trắng">
                 </div>
@@ -223,6 +228,7 @@
                         <span>2mm</span><span>3mm</span>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
     </div>
@@ -366,7 +372,7 @@
                             </div>
                             <div class="method-text">
                                 <strong>Email</strong>
-                                <span>tmdvvietnam@gmail.com</span>
+                                <span>tmdvvietnamsale@gmail.com</span>
                             </div>
                         </div>
                     </div>
@@ -443,7 +449,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope"></i>
-                        <span>tmdvvietnam@gmail.com</span>
+                        <span>tmdvvietnamsale@gmail.com</span>
                     </li>
                 </ul>
             </div>
