--- a/vn/products/index.html
+++ b/vn/products/index.html
@@ -355,7 +355,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope"></i>
-                        <span>tmdvvietnam@gmail.com</span>
+                        <span>tmdvvietnamsale@gmail.com</span>
                     </li>
                 </ul>
             </div>
