--- a/vn/products/bintagor.html
+++ b/vn/products/bintagor.html
@@ -428,7 +428,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope"></i>
-                        <span>tmdvvietnam@gmail.com</span>
+                        <span>tmdvvietnamsale@gmail.com</span>
                     </li>
                 </ul>
             </div>
